tests/outputs/msg_parse_006.out
scripts/msg_parse: tests/cases/msg_parse_006.inp: NOTE, unable to parse error message '  prefixed error line'.
scripts/msg_parse: tests/cases/msg_parse_006.inp: NOTE, unable to parse error message '  prefixed error line2'.
script	-	9	1	data_data	ERROR	incorrect CIF syntax	
loop__tag_l1 _tag_l2 _tag_l3
^
script	-	9	22	data_data	ERROR	incorrect CIF syntax	
loop__tag_l1 _tag_l2 _tag_l3
                     ^
script	-	9		data_data	ERROR	incorrect CIF syntax	
loop_
script	file				ERROR	error
script	file				ERROR	error that is followed by a line
